<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/tools"
    tools:context=".View.RulesView"
    android:layout_marginTop="55dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            app:cardBackgroundColor="#CC7474F7"
            app:cardCornerRadius="10dp"
            android:id="@+id/eventcard">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="The Game"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:gravity="left"
                android:layout_margin="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/game"
                android:textSize="20sp"
                android:textColor="#ffffff"
                android:textStyle="bold"
                android:gravity="left"
                android:layout_margin="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            app:cardBackgroundColor="#CC7474F7"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Downs"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Down"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            app:cardBackgroundColor="#CC7474F7"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Scoring in American football"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/Scoring"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            app:cardBackgroundColor="#CC7474F7"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/touchdown"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/touchdowndesc"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            app:cardBackgroundColor="#CC7474F7"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/field"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fileddesc"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            app:cardBackgroundColor="#CC7474F7"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extra"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/extradesc"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            android:layout_margin="10dp"
            card_view:cardUseCompatPadding="true"
            card_view:cardElevation="4dp"
            app:cardBackgroundColor="#CC7474F7"
            app:cardCornerRadius="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/safety"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_margin="10dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/safetydesc"
                    android:textSize="20sp"
                    android:textColor="#ffffff"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_margin="10dp"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>